--- a/addon/locale/it/LC_MESSAGES/nvda.po
+++ b/addon/locale/it/LC_MESSAGES/nvda.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 'Lambda' '1.1.2'\n"
 "Report-Msgid-Bugs-To: 'nvda-translations@freelists.org'\n"
-"POT-Creation-Date: 2016-09-10 20:46+0200\n"
-"PO-Revision-Date: 2016-09-10 20:50+0100\n"
+"POT-Creation-Date: 2016-09-16 18:56+0200\n"
+"PO-Revision-Date: 2016-09-16 19:11+0100\n"
 "Last-Translator: \n"
 "Language-Team: Alberto Zanella <lapostadialberto@gmail.com>\n"
 "Language: it\n"
@@ -17,29 +17,31 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Poedit 1.5.4\n"
 
-#: addon\appModules\lambda\lambdaEdit.py:80
+#. Translators: this is a custom implementation of the globalCommands gesture, it doesn't support spelling.
+#: addon\appModules\lambda\lambdaEdit.py:78
 msgid "Reports the current line under the application cursor."
 msgstr "Legge la riga in cui si trova il cursore."
 
-#: addon\appModules\lambda\lambdaEdit.py:86
+#. Translators: Lambda can't read from the current caret position, the implementation of sayAll provided starts reading from the top of the document.
+#: addon\appModules\lambda\lambdaEdit.py:84
 msgid "reads from the beginning of the document up to the end of the text."
 msgstr "Legge il testo dall'inizio alla fine del documento."
 
-#: addon\appModules\lambda\lambdaEdit.py:92
-msgid ""
-"Announces the current selection in edit controls and documents. If there is "
-"no selection it says so."
+#. Translators: this is a custom implementation of the globalCommands gesture.
+#: addon\appModules\lambda\lambdaEdit.py:90
+msgid "Announces the current selection in edit controls and documents."
 msgstr "Legge il testo attualmente selezionato."
 
-#: addon\appModules\lambda\lambdaEdit.py:159
+#: addon\appModules\lambda\lambdaEdit.py:157
 msgid "selected"
 msgstr "selezionato"
 
-#: addon\appModules\lambda\lambdaEdit.py:161
+#: addon\appModules\lambda\lambdaEdit.py:159
 msgid "not selected"
 msgstr "non selezionato"
 
-#: addon\appModules\lambda\lambdaEdit.py:211
+#. Translators: This is a Lambda hotkey ctrl+b extends the selection to the next surrounding block, ctrl+shift+b reduce the selection to a smaller block.
+#: addon\appModules\lambda\lambdaEdit.py:215
 msgid ""
 "Extends the selection to the surrounding block and reads it. If used with "
 "shift key, reduce the block and read it."
@@ -47,24 +49,26 @@ msgstr ""
 "Estende la selezione del blocco di testo e la legge. Se viene premuto anche "
 "SHIFT la selezione verrà ridotta di un blocco."
 
-#: addon\appModules\lambda\lambdaEdit.py:218
+#. Translators: This is a Lambda hotkey. ctrl+d is a macro that duplicates current line. The script reports the duplicated line.
+#: addon\appModules\lambda\lambdaEdit.py:224
 msgid "Duplicates the current line and reads it"
 msgstr "Duplica la riga corrente e la legge."
 
 #. Translators: This determines whether to use API or DisplayMode to render the editor window on a braille display. It is a toggle (on/off)
-#: addon\appModules\lambda\lambdaEdit.py:225
+#: addon\appModules\lambda\lambdaEdit.py:229
 msgid "flat mode "
 msgstr "modalità flat "
 
-#: addon\appModules\lambda\lambdaEdit.py:227
+#: addon\appModules\lambda\lambdaEdit.py:231
 msgid "on"
 msgstr "attivato"
 
-#: addon\appModules\lambda\lambdaEdit.py:227
+#: addon\appModules\lambda\lambdaEdit.py:231
 msgid "off"
 msgstr "non attivato"
 
-#: addon\appModules\lambda\lambdaEdit.py:230
+#. This script set the desired textInfo for braille, when flat mode is on, the LambdaEditorFlatTextInfo is used, otherwise the LambdaEditorTextInfo is set.
+#: addon\appModules\lambda\lambdaEdit.py:235
 msgid "Toggle the braille flat mode on or off."
 msgstr "Attiva o disattiva la modalità braille flat."
 
@@ -73,8 +77,21 @@ msgstr "Attiva o disattiva la modalità braille flat."
 msgid "lambda-ita.utb"
 msgstr "lambda-ita.utb"
 
-#. # Translators: message box when user is installing the addon in NVDA and a "lambda" profile is already present.
+#. # Translators: message box when user is installing the addon in NVDA and an older version prevents the update to be done.
 #: addon\installTasks.py:16
+msgid ""
+"An older version of this addon has been detected.\n"
+"This prevents the installation to be completed.\n"
+"Please uninstall the previous version before proceeding with the Lambda "
+"addon setup.\n"
+msgstr ""
+"E' stata rilevata la presenza di una precedente installazione dell'addon.\n"
+"Questo non consente di proseguire con l'installazione.\n"
+"Prima di procedere disinstallare la precedente versione dell'addon per "
+"Lambda.\n"
+
+#. # Translators: message box when user is installing the addon in NVDA and a "lambda" profile is already present.
+#: addon\installTasks.py:22
 msgid ""
 "Another profile named \"lambda\" is already present in your NVDA "
 "configuration. \n"
