Added spanish braille table, the base for building it (format unicod brailledots) and modified the translation to set it as default. The changes (and in consequence the table too) will remain under tests and you can report problems using the LAMBDA with NVDA list <https://groups.google.com/group/lambda-nvda> or using the issue that is being created shortly. A compiled version of the addon is being published shortly to ensure that medium-level users can test the table.

--- a/addon/locale/es/LC_MESSAGES/nvda.po
+++ b/addon/locale/es/LC_MESSAGES/nvda.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 'Lambda' '1.1.4'\n"
 "POT-Creation-Date: 2017-05-10 09:09+0200\n"
-"PO-Revision-Date: 2017-05-10 12:34+0200\n"
+"PO-Revision-Date: 2017-05-12 21:11+0200\n"
 "Last-Translator: Iván Novegil Cancelas <info@inovegil.site40.net>\n"
 "Language-Team: Iván Novegil Cancelas <info@inovegil.site40.net>\n"
 "Language: es\n"
@@ -49,7 +49,7 @@ msgstr "Conmuta el modo plano de braille entre activado y desactivado."
 
 #: addon/appModules/lambda/lambdaProfileSetup.py:16
 msgid "lambda-ita.utb"
-msgstr ""
+msgstr "lambda-esp.utb"
 
 #: addon/appModules/lambda/sharedMessages/__init__.py:8
 msgid "selected"
