--- a/addon/locale/gl/LC_MESSAGES/nvda.po
+++ b/addon/locale/gl/LC_MESSAGES/nvda.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 'Lambda' '1.1.4'\n"
 "POT-Creation-Date: 2017-05-10 09:09+0200\n"
-"PO-Revision-Date: 2017-05-10 09:21+0200\n"
+"PO-Revision-Date: 2017-05-15 13:26+0200\n"
 "Last-Translator: Iván Novegil Cancelas <info@inovegil.site40.net>\n"
 "Language-Team: Iván Novegil Cancelas <info@inovegil.site40.net>\n"
 "Language: gl\n"
@@ -110,7 +110,7 @@ msgstr ""
 
 #: buildVars.py:17
 msgid "Lambda math editor addon"
-msgstr "Complemento para o editor matemático Lambda"
+msgstr "Lambda (editor matemático) coma complemento para NVDA"
 
 #: buildVars.py:20
 msgid ""
