--- a/addon/locale/it/LC_MESSAGES/nvda.po
+++ b/addon/locale/it/LC_MESSAGES/nvda.po
@@ -7,9 +7,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 'Lambda' '1.1.2'\n"
 "Report-Msgid-Bugs-To: 'nvda-translations@freelists.org'\n"
-"POT-Creation-Date: 2017-05-18 16:58+0200\n"
-"PO-Revision-Date: 2017-05-18 17:04+0100\n"
-"Last-Translator: \n"
+"POT-Creation-Date: 2017-06-05 12:11+0200\n"
+"PO-Revision-Date: 2017-06-05 14:03+0100\n"
+"Last-Translator: Alberto Zanella\n"
 "Language-Team: Alberto Zanella <lapostadialberto@gmail.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -17,35 +17,51 @@ msgstr ""
 "Language: it\n"
 "X-Generator: Poedit 2.0.2\n"
 
+#. Translators: The string used by Lambda to announce spaces (see LambdaDir\Lang\YourLanguage\Messages.dat with the key space=)
+#: addon\appModules\lambda\__init__.py:34
+msgid "space"
+msgstr "spazio"
+
 #. Translators: Message presented in input help mode.
-#: addon\appModules\lambda\__init__.py:91
+#: addon\appModules\lambda\__init__.py:99
 msgid "Shows a dialog to revert lambda profile options to the default."
 msgstr "Apre una finestra di dialogo da cui è possibile ripristinare le opzioni del profilo di lambda al loro valore predefinito."
 
 #. Translators: this is a custom implementation of the globalCommands gesture, it doesn't support spelling.
-#: addon\appModules\lambda\lambdaEdit.py:81
+#: addon\appModules\lambda\lambdaEdit.py:83
 msgid "Reports the current line under the application cursor."
 msgstr "Legge la riga in cui si trova il cursore."
 
 #. Translators: Lambda can't read from the current caret position, the implementation of sayAll provided starts reading from the top of the document.
-#: addon\appModules\lambda\lambdaEdit.py:87
+#: addon\appModules\lambda\lambdaEdit.py:89
 msgid "reads from the beginning of the document up to the end of the text."
 msgstr "Legge il testo dall'inizio alla fine del documento."
 
 #. Translators: this is a custom implementation of the globalCommands gesture.
-#: addon\appModules\lambda\lambdaEdit.py:93
+#: addon\appModules\lambda\lambdaEdit.py:95
 msgid "Announces the current selection in edit controls and documents."
 msgstr "Legge il testo attualmente selezionato."
 
+#. This script duplicates the current line and announce it
+#: addon\appModules\lambda\lambdaEdit.py:295
+msgid "Duplicate the current line and sets the cursor to the new line."
+msgstr "Duplica la riga corrente e vi sposta il cursore."
+
 #. Translators: This determines whether to use API or DisplayMode to render the editor window on a braille display. It is a toggle (on/off)
-#: addon\appModules\lambda\lambdaEdit.py:285
+#: addon\appModules\lambda\lambdaEdit.py:300
 msgid "flat mode "
 msgstr "modalità flat "
 
 #. This script set the desired textInfo for braille, when flat mode is on, the LambdaEditorFlatTextInfo is used, otherwise the LambdaEditorTextInfo is set.
-#: addon\appModules\lambda\lambdaEdit.py:291
+#: addon\appModules\lambda\lambdaEdit.py:306
 msgid "Toggle the braille flat mode on or off."
 msgstr "Attiva o disattiva la modalità braille flat."
+
+#: addon\appModules\lambda\lambdaEdit.py:310
+msgid ""
+"Duplicate lines using control+d shortcut may causes error or stability issues while using Lambda with NVDA.\n"
+"Please consider using the NVDA+D shortcut instead."
+msgstr "Utilizzare la combinazione tasti control+d per duplicare le righe può comportare problemi di stabilità quando si usa Lambda con NVDA.Come alternativa si consiglia di utilizzare il comando NVDA+d."
 
 #. Translators: This string is the file name of the Lambda braille table for the translated language. The file should be present in the "brailleTables" directory in this addon. The default is the italian braille translation table.
 #: addon\appModules\lambda\lambdaProfileSetup.py:22
@@ -140,6 +156,3 @@ msgstr "Questo addon facilita l'uso di Lambda con NVDA offrendo il supporto brai
 #~ msgstr ""
 #~ "Estende la selezione del blocco di testo e la legge. Se viene premuto "
 #~ "anche SHIFT la selezione verrà ridotta di un blocco."
-
-#~ msgid "Duplicates the current line and reads it"
-#~ msgstr "Duplica la riga corrente e la legge."
