--- a/addon/locale/bg/LC_MESSAGES/nvda.po
+++ b/addon/locale/bg/LC_MESSAGES/nvda.po
@@ -8,92 +8,95 @@ msgstr ""
 "Project-Id-Version: lambda 1.1.8\n"
 "Report-Msgid-Bugs-To: nvda-translations@freelists.org\n"
 "POT-Creation-Date: 2017-06-20 06:07+1000\n"
-"PO-Revision-Date: 2017-06-22 21:32+0200\n"
-"Language: gl\n"
+"PO-Revision-Date: 2017-06-22 11:16+0200\n"
+"Last-Translator: Kostadin Kolev <k_kolev1985@mail.bg>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: bg\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Last-Translator: Iván Novegil Cancelas <ivan.novegil.cancelas@gmail.com>\n"
-"Language-Team: Iván Novegil Cancelas <ivan.novegil.cancelas@gmail.com>\n"
-"X-Generator: Poedit 1.8.8\n"
+"X-Generator: Poedit 1.6.11\n"
 
 #. Translators: Message presented in input help mode.
 msgid "Shows a dialog to revert lambda profile options to the default."
 msgstr ""
-"Amosa un diálogo para revertir as opcións do perfil LAMBDA ás de fábrica"
+"Показва диалогов прозорец за връщане на настройките в профила на LAMBDA до "
+"техните заводски стойности"
 
 #. Translators: this is a custom implementation of the globalCommands gesture, it doesn't support spelling.
 msgid "Reports the current line under the application cursor."
-msgstr "Informa da liña actual baixo o cursor da aplicación."
+msgstr "Съобщава текущия ред под курсора на приложението"
 
 #. Translators: Lambda can't read from the current caret position, the implementation of sayAll provided starts reading from the top of the document.
 msgid "reads from the beginning of the document up to the end of the text."
-msgstr "lee dende o comezo do documento ata o final do texto."
+msgstr "Чете от началото на документа до края на текста"
 
 #. Translators: this is a custom implementation of the globalCommands gesture.
 msgid "Announces the current selection in edit controls and documents."
-msgstr "Anuncia a selección actual en controis de edición e documentos."
+msgstr "Съобщава текущата селекция в контроли за редактиране и документи"
 
 #. This script duplicates the current line and announce it
 msgid "Duplicate the current line and sets the cursor to the new line."
-msgstr "Duplicar a liña actual e move o cursor á liña nova."
+msgstr "Дублира текущия ред и премества курсора до новия ред"
 
 #. Translators: This determines whether to use API or DisplayMode to render the editor window on a braille display. It is a toggle (on/off)
 msgid "flat mode "
-msgstr "modo plano "
+msgstr "Плосък режим "
 
 #. This script set the desired textInfo for braille, when flat mode is on, the LambdaEditorFlatTextInfo is used, otherwise the LambdaEditorTextInfo is set.
 msgid "Toggle the braille flat mode on or off."
-msgstr "Conmuta o modo plano do braille entre activado e desactivado."
+msgstr "Включва или изключва плоския режим за брайл"
 
 msgid ""
 "Duplicate lines using control+d shortcut may causes error or stability "
 "issues while using Lambda with NVDA.\n"
 "Please consider using the NVDA+D shortcut instead."
 msgstr ""
-"Duplicar liñas usando o atallo control+d podería causar erros e "
-"inestabilidade usando LAMBDA con NVDA.\n"
-"Pregámoslle considere a utilización do atallo NVDA+D no seu lugar."
+"Дублирането на редове посредством Control+D може да предизвика грешки или "
+"проблеми със стабилността при използване на Lambda с NVDA.\n"
+"Моля, вместо това използвайте NVDA+D."
 
 #. Translators: This string is the file name of the Lambda braille table for the translated language. The file should be present in the "brailleTables" directory in this addon. The default is the italian braille translation table.
 msgid "lambda-ita.utb"
-msgstr "lambda-esp.utb"
+msgstr ""
 
 #. Translators: This is the label for the Quick Profile Wizard dialog.
 #. This dialog helps the user to reset relevant profile options without deleting his custom settings.
 msgid "Revert LAMBDA Profile Wizard"
-msgstr "Asistente de Reversión do Perfil LAMBDA"
+msgstr "Съветник за възстановяване на профила за LAMBDA"
 
 #. Translators: This is the static text of the Quick Profile Wizard dialog.
 msgid ""
 "Choose which options you want to reset to the default value for the Lambdas "
 "profile"
-msgstr "Escolla cales das opcións do perfil LAMBDA desexa restablecer"
+msgstr ""
+"Изберете кои настройки в профила за LAMBDA желаете да върнете до заводските "
+"им стойности"
 
 #. Translators: This is the label for a checkbox in the
 #. Quick Profile Wizard dialog.
 #, python-format
 msgid "Keep the LAMBDA braille table for the current language (%s)"
-msgstr "Manter a tabla braille para a lingua actual (%s)"
+msgstr "Запази брайловата таблица за LAMBDA за текущия език (%s)"
 
 #. Translators: This is the label for a checkbox in the
 #. Quick Profile Wizard dialog.
 msgid "Set the braille cursor to tether the focus"
-msgstr "Configurar o cursor braille para seguir ó foco"
+msgstr "Задай брайловия курсор да е привързан към фокуса"
 
 #. Translators: This is the label for a checkbox in the
 #. Quick Profile Wizard dialog.
 msgid "Disable the Braille reading by paragraph"
-msgstr "Deshabilitar a lectura braille por parágrafo"
+msgstr "Забрани четенето на брайл по абзаци"
 
 #. Translators: This is the label for a checkbox in the
 #. Quick Profile Wizard dialog.
 msgid "Disable word wrappping of the braille line"
-msgstr "Deshabilitar a non separación de palabras braille dunha liña"
+msgstr "Забрани пренасянето на брайловия ред"
 
 #. Translators: title of the message box that appears when the user is installing the addon and an older version prevents the update to be completed.
 msgid "Incompatible version of the addon detected"
-msgstr "Versión incompatible do complemento detectada"
+msgstr "Открита е несъвместима версия на добавката"
 
 #. Translators: text of the message box that appears when the user is installing the addon and an older version prevents the update to be completed.
 msgid ""
@@ -102,14 +105,14 @@ msgid ""
 "Please uninstall the previous version before proceeding with the Lambda "
 "addon setup.\n"
 msgstr ""
-"Unha versión vella e incompatible deste complemento foi detectada.\n"
-"Isto impide que a instalación sexa completada.\n"
-"Pregámoslle desinstale a versión vella antes de proceder coa instalación do "
-"complemento Lambda.\n"
+"Открита е стара несъвместима версия на тази добавка.\n"
+"Това предотвратява успешното завършване на инсталацията.\n"
+"Моля, премахнете предишната версия, преди да продължите с инсталирането на "
+"добавката за LAMBDA.\n"
 
 #. Translators: title of the message box that appears when user is installing the addon in NVDA and a "lambda" profile is already present.
 msgid "lambda profile already exists"
-msgstr "Perfil lambda xa existe"
+msgstr "Вече съществува профил LAMBDA"
 
 #. Translators: text of the message box that appears when user is installing the addon in NVDA and a "lambda" profile is already present.
 msgid ""
@@ -121,18 +124,19 @@ msgid ""
 "Wizard (pressing nvda+alt+r) while the Lambda Application is active.\n"
 "Press OK to complete the addon Setup.\n"
 msgstr ""
-"Outro perfil con nome lambda está presente na súa configuración do NVDA:\n"
-"Isto podería impedir ao complemento crear e configurar o perfil para LAMBDA "
-"correctamente.\n"
-"Por favor revise as opcións por defecto do complemento usando o Asistente de "
-"reversión do perfil lambda (premendo NVDA+alt+r) mentres a aplicación LAMBDA "
-"estea activa.\n"
-"Prema Aceptar para completar a instalación do complemento.\n"
+"Във вашата конфигурация за NVDA вече е наличен друг профил с име \"LAMBDA"
+"\".\n"
+"Това може да предотврати правилното създаване и настройване от страна на "
+"добавката на конфигурационния профил за LAMBDA.\n"
+"Моля, прегледайте настройките по подразбиране за тази добавка, като "
+"използвате \"Съветник за възстановяване на профила за LAMBDA\" (чрез "
+"натискане на NVDA+Alt+R) докато приложението LAMBDA е на фокус.\n"
+"Задействайте бутона OK, за да завършите настройката на добавката.\n"
 
 #. Add-on summary, usually the user visible name of the addon.
 #. Translators: Summary for this add-on to be shown on installation and add-on information.
 msgid "Lambda math editor addon"
-msgstr "Lambda (editor matemático) coma complemento"
+msgstr "Добавка за редактора за математика LAMBDA"
 
 #. Add-on description: can span multiple lines with """ syntax """
 #. Translators: Long description to be shown for this add-on on add-on information from add-ons manager
@@ -140,5 +144,5 @@ msgid ""
 "This addon provides access to the Lambda math editor with both braille and "
 "speech support."
 msgstr ""
-"Este complemento proporciona o acceso ao editor Lambda con soporte para "
-"braille e fala."
+"Тази добавка предоставя достъп до редактора за математика LAMBDA с поддръжка "
+"както за брайл, така и за реч."
