--- a/addon/locale/it/LC_MESSAGES/nvda.po
+++ b/addon/locale/it/LC_MESSAGES/nvda.po
@@ -1,156 +1,149 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# This file is distributed under the same license as the lambda package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: 'Lambda' '1.1.2'\n"
-"Report-Msgid-Bugs-To: 'nvda-translations@freelists.org'\n"
-"POT-Creation-Date: 2017-06-05 12:11+0200\n"
-"PO-Revision-Date: 2017-06-05 19:28+0200\n"
-"Last-Translator: Alberto Zanella\n"
-"Language-Team: Alberto Zanella <lapostadialberto@gmail.com>\n"
+"Project-Id-Version: lambda 1.1.8\n"
+"Report-Msgid-Bugs-To: nvda-translations@freelists.org\n"
+"POT-Creation-Date: 2017-06-20 06:07+1000\n"
+"PO-Revision-Date: 2017-06-22 10:36+0200\n"
+"Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: it\n"
-"X-Generator: Poedit 2.0.2\n"
-
-#. Translators: The string used by Lambda to announce spaces (see LambdaDir\Lang\YourLanguage\Messages.dat with the key space=)
-#: addon\appModules\lambda\__init__.py:34
-msgid "space"
-msgstr "spazio"
+"Last-Translator: Simone Dal Maso <simone.dalmaso@gmail.com>\n"
+"Language-Team: \n"
+"X-Generator: Poedit 1.8.7\n"
 
 #. Translators: Message presented in input help mode.
-#: addon\appModules\lambda\__init__.py:99
 msgid "Shows a dialog to revert lambda profile options to the default."
-msgstr "Apre una finestra di dialogo da cui è possibile ripristinare le opzioni del profilo di lambda al loro valore predefinito."
+msgstr ""
+"Mostra una finestra di dialogo per ripristinare le opzioni del profilo di "
+"Lambda alle impostazioni predefinite."
 
 #. Translators: this is a custom implementation of the globalCommands gesture, it doesn't support spelling.
-#: addon\appModules\lambda\lambdaEdit.py:83
 msgid "Reports the current line under the application cursor."
-msgstr "Legge la riga in cui si trova il cursore."
+msgstr "Legge la riga in cui è posizionato il cursore."
 
 #. Translators: Lambda can't read from the current caret position, the implementation of sayAll provided starts reading from the top of the document.
-#: addon\appModules\lambda\lambdaEdit.py:89
 msgid "reads from the beginning of the document up to the end of the text."
-msgstr "Legge il testo dall'inizio alla fine del documento."
+msgstr "Legge il documento corrente dall'inizio alla fine."
 
 #. Translators: this is a custom implementation of the globalCommands gesture.
-#: addon\appModules\lambda\lambdaEdit.py:95
 msgid "Announces the current selection in edit controls and documents."
-msgstr "Legge il testo attualmente selezionato."
+msgstr "Legge la selezione corrente in campi editazione e controlli."
 
 #. This script duplicates the current line and announce it
-#: addon\appModules\lambda\lambdaEdit.py:295
 msgid "Duplicate the current line and sets the cursor to the new line."
-msgstr "Duplica la riga corrente e vi sposta il cursore."
+msgstr "Duplica la riga corrente e posiziona il cursore nella nuova riga."
 
 #. Translators: This determines whether to use API or DisplayMode to render the editor window on a braille display. It is a toggle (on/off)
-#: addon\appModules\lambda\lambdaEdit.py:300
 msgid "flat mode "
-msgstr "modalità flat "
+msgstr "Modalità in linea"
 
 #. This script set the desired textInfo for braille, when flat mode is on, the LambdaEditorFlatTextInfo is used, otherwise the LambdaEditorTextInfo is set.
-#: addon\appModules\lambda\lambdaEdit.py:306
 msgid "Toggle the braille flat mode on or off."
-msgstr "Attiva o disattiva la modalità braille flat."
+msgstr "Attiva o disattiva la modalità braille in linea"
 
-#: addon\appModules\lambda\lambdaEdit.py:310
 msgid ""
-"Duplicate lines using control+d shortcut may causes error or stability issues while using Lambda with NVDA.\n"
+"Duplicate lines using control+d shortcut may causes error or stability "
+"issues while using Lambda with NVDA.\n"
 "Please consider using the NVDA+D shortcut instead."
 msgstr ""
-"Utilizzare la combinazione tasti control+d per duplicare le righe può comportare problemi di stabilità quando si usa Lambda con NVDA.\n"
-"Come soluzione si consiglia di utilizzare il comando NVDA+d."
+"Se si utilizza il comando ctrl+d per duplicare le righe si possono "
+"incontrare problemi con questo componente aggiuntivo.\n"
+"Si prega di servirsi della combinazione NVDA+d"
 
 #. Translators: This string is the file name of the Lambda braille table for the translated language. The file should be present in the "brailleTables" directory in this addon. The default is the italian braille translation table.
-#: addon\appModules\lambda\lambdaProfileSetup.py:22
 msgid "lambda-ita.utb"
 msgstr "lambda-ita.utb"
 
 #. Translators: This is the label for the Quick Profile Wizard dialog.
 #. This dialog helps the user to reset relevant profile options without deleting his custom settings.
-#: addon\appModules\lambda\lambdaProfileSetup.py:103
 msgid "Revert LAMBDA Profile Wizard"
-msgstr "Ripristino guidato impostazioni di LAMBDA"
+msgstr "Procedura guidata Ripristino profilo di Lambda"
 
 #. Translators: This is the static text of the Quick Profile Wizard dialog.
-#: addon\appModules\lambda\lambdaProfileSetup.py:107
-msgid "Choose which options you want to reset to the default value for the Lambdas profile"
-msgstr "Scegli quali opzioni desideri ripristinare al valore predefinito per il profilo di Lambda"
+msgid ""
+"Choose which options you want to reset to the default value for the Lambdas "
+"profile"
+msgstr "Selezionare le opzioni che si desidera riportare ai valori originali"
 
 #. Translators: This is the label for a checkbox in the
 #. Quick Profile Wizard dialog.
-#: addon\appModules\lambda\lambdaProfileSetup.py:112
 #, python-format
 msgid "Keep the LAMBDA braille table for the current language (%s)"
-msgstr "Mantieni la tabella braille di Lambda per la lingua corrente (%s)"
+msgstr "Mantieni la tabella braille per la lingua attuale  (%s)"
 
 #. Translators: This is the label for a checkbox in the
 #. Quick Profile Wizard dialog.
-#: addon\appModules\lambda\lambdaProfileSetup.py:117
 msgid "Set the braille cursor to tether the focus"
-msgstr "Imposta il cursore braille per inseguire il focus"
+msgstr "Imposta il cursore Braille affinché segua il focus"
 
 #. Translators: This is the label for a checkbox in the
 #. Quick Profile Wizard dialog.
-#: addon\appModules\lambda\lambdaProfileSetup.py:122
 msgid "Disable the Braille reading by paragraph"
-msgstr "Disabilita la lettura per paragrafi in braille"
+msgstr "Disabilita la funzione braille lettura per paragrafi"
 
 #. Translators: This is the label for a checkbox in the
 #. Quick Profile Wizard dialog.
-#: addon\appModules\lambda\lambdaProfileSetup.py:127
 msgid "Disable word wrappping of the braille line"
-msgstr "Mantieni le parole spezzate nella riga in braille"
+msgstr ""
+"Disabilita la funzione braille \"evita di spezzare le parole\" per la riga "
+"corrente"
 
 #. Translators: title of the message box that appears when the user is installing the addon and an older version prevents the update to be completed.
-#: addon\installTasks.py:17
 msgid "Incompatible version of the addon detected"
-msgstr "Individuata una incompatibilità di versione"
+msgstr "Versione incompatibile individuata"
 
 #. Translators: text of the message box that appears when the user is installing the addon and an older version prevents the update to be completed.
-#: addon\installTasks.py:20
 msgid ""
 "An old, incompatible version of this addon has been detected.\n"
 "This prevents the installation to be completed.\n"
-"Please uninstall the previous version before proceeding with the Lambda addon setup.\n"
+"Please uninstall the previous version before proceeding with the Lambda "
+"addon setup.\n"
 msgstr ""
-"E' stata rilevata la presenza di una precedente installazione dell'addon che risulta incompatibile.\n"
-"Questo non consente di completare l'installazione in modo corretto.\n"
-"Prima di procedere disinstallare la precedente versione dell'addon per Lambda.\n"
+"è stata rilevata una versione vecchia e incompatibile del componente "
+"aggiuntivo.\n"
+"Questo impedisce che l'installazione sia completata.\\n\n"
+"Si prega di disinstallare la versione precedente prima di procedere con il "
+"setup di Lambda.\n"
 
 #. Translators: title of the message box that appears when user is installing the addon in NVDA and a "lambda" profile is already present.
-#: addon\installTasks.py:26
 msgid "lambda profile already exists"
-msgstr "Profilo lambda esistente"
+msgstr "Profilo Lambda già esistente"
 
 #. Translators: text of the message box that appears when user is installing the addon in NVDA and a "lambda" profile is already present.
-#: addon\installTasks.py:29
 msgid ""
-"Another profile named \"lambda\" is already present in your NVDA configuration. \n"
-"This may prevents the addon on create and configure the lambda profile correctly.\n"
-"Please review default options for this addon using the Revert LAMBDA Profile Wizard (pressing nvda+alt+r) while the Lambda Application is active.\n"
+"Another profile named \"lambda\" is already present in your NVDA "
+"configuration. \n"
+"This may prevents the addon on create and configure the lambda profile "
+"correctly.\n"
+"Please review default options for this addon using the Revert LAMBDA Profile "
+"Wizard (pressing nvda+alt+r) while the Lambda Application is active.\n"
 "Press OK to complete the addon Setup.\n"
 msgstr ""
-"Un altro profilo chiamato \"lambda\" è già presente nell'attuale configurazione di NVDA. \n"
-"Ciò comporta che l'addon non creerà e configurerà correttamente un profilo per Lambda.\n"
-"E' possibile impostare le configurazioni predefinite al prossimo avvio dell'applicazione Lambda utilizzando il Ripristino guidato impostazioni di LAMBDA per NVDA (comando nvda+alt+r).\n"
-"Premere OK per continuare l'installazione.\n"
+"Esiste già un profilo denominato Lambda nella configurazione di NVDA.\n"
+"Ciò impedisce al componente aggiuntivo la creazione e l'esatta "
+"configurazione del profilo.\n"
+"\n"
+"Si consiglia di servirsi della combinazione NVDA+alt+r per iniziare la "
+"procedura guidata di ripristino del profilo alle impostazioni originali, "
+"ricordandosi di tenere il programma Lambda in primo piano.\n"
+"Premere OK per completare il setup di Lambda.\n"
 
 #. Add-on summary, usually the user visible name of the addon.
 #. Translators: Summary for this add-on to be shown on installation and add-on information.
-#: buildVars.py:17
 msgid "Lambda math editor addon"
-msgstr "LAMBDA per NVDA"
+msgstr "Lambda math editor addon"
 
 #. Add-on description: can span multiple lines with """ syntax """
 #. Translators: Long description to be shown for this add-on on add-on information from add-ons manager
-#: buildVars.py:20
-msgid "This addon provides access to the Lambda math editor with both braille and speech support."
-msgstr "Questo addon facilita l'uso di Lambda con NVDA offrendo il supporto braille ed in sintesi vocale."
-
-#~ msgid "Extends the selection to the surrounding block and reads it. If used with shift key, reduce the block and read it."
-#~ msgstr "Estende la selezione del blocco di testo e la legge. Se viene premuto anche SHIFT la selezione verrà ridotta di un blocco."
+msgid ""
+"This addon provides access to the Lambda math editor with both braille and "
+"speech support."
+msgstr ""
+"Questo componente aggiuntivo fornisce accesso alle funzioni dell'editor "
+"matematico Lambda, sia con sintesi vocale che con display braille."
